# sandbox

./: .gitignore
build-your-own-db-go/: README.md  go.mod  main.go
build-your-own-react/: README.md  didact.js  main.js  package-lock.json  package.json
build-your-own-react/src/: didact.js  index.js  step_zero.js
consistent-hash/: README.md
consistent-hash/lib/: CMakeLists.txt  consistent_hash.h  consistent_hash_test.cc  hash.h  kv_store.h  kv_store_test.cc
consistent-hash/src/: CMakeLists.txt  kvs.cc
cpp-misc/: README.md  using.cc  variant.cc
cpp-template/: CMakeLists.txt  README.md
cpp-template/lib/: CMakeLists.txt  add.h  add_test.cc
cpp-template/src/: main.cc
cpp-variant/: README.md
cpp-virtual/: a.cpp
deno/: README.md
deno/project/: check.ts  deno.jsonc
deno/quickstart/: hello.ts  sell.ts  server.ts  shop.ts
ebpf/: README.md  hello-buffer.py  hello-count.py  hello-map.py  hello-tail.py  hello.py
express/: README.md  index.js  package-lock.json  package.json  store.js  utils.js
express/public/: index.html  script.js  style.css
flex-bison/: README.md
flex-bison/ast-example/: lexer.l  sample.txt
flex-bison/cpp-bison/: parser.cc  parser.yy
flex-bison/first-bison/: infix.tab.c  infix.y  rpcalc.tab.c  rpcalc.y
flex-bison/first-lex/: lex.l  lex.yy.c  lex.yy.h
flex-bison/mfcalc/: Makefile  calc.h  parser.tab.c  parser.y
flex-bison/pascal/: Makefile  hello.pas  pascal.l  pascal.yy.c  pascal.yy.h
flex-bison/practical-example/: CMakeLists.txt  driver.cc  driver.h  main.cc  parser.yy
flex-bison/sql-example/: CMakeLists.txt  lexer.l  main.cc  parser.y  sql.h
global-interpreter-lock/: README.md  multiprocess.cc  multiprocess.py  multithread.cc  multithread.py  run.sh  single.cc  single.py
jwt/: README.md  pyproject.toml
jwt/jwe/: create_secret.py  encode.py
llamaindex-sandbox/: .gitignore  README.md  main.py  pyproject.toml
llamaindex-sandbox/data/: favorite_color.txt
llamaindex-sandbox/persist/: documents.py  load.py  persist.py  query.py  readme.md  settings.py  update.py
llamaindex-sandbox/query/: query.py
llamaindex-sandbox/simple_storage/: sample.py  setting.py  simple_storage.py
llamaindex-sandbox/vertex/: gemini.py  main.py  retriever.py
multiprocessing-book/: .gitignore  Cargo.toml  build.rs  pthread_cond.c  pthread_mutex.c  sync.c
multiprocessing-book/asm/: context.S
multiprocessing-book/src/: async_runtime.rs  async_server.rs  async_tokio.rs  channel.rs  condvar.rs  coroutine.rs  coroutine_schedule.rs  fair_lock.rs  fair_lock_main.rs  green.rs  green_actor_main.rs  mcs_lock.rs  mutex.rs  parallel_server.rs  rwlock.rs  semaphore.rs  semaphore_test.rs  tl2.rs  tl2_main.rs
multiprocessing-book/typescript/: README.md  main.ts
my-next-app/: package-lock.json  package.json
my-next-app/my-app/: package-lock.json
nextjs-tutorial/nextjs-dashboard/: README.md
oidc-sample/: README.md  index.js  package-lock.json  package.json
play-abseil/: BUILD  README.md  WORKSPACE  hello_world.cc  play_view.cc
play-aws/: main.py  pyproject.toml
play-aws/s3-lambda/: a.json  lambda_download.py  lambda_upload.py  main.py  post.py  post.sh
play-aws/s3-lambda/client/: index.html
play-aws/s3-lambda/local-server/: main.py
play-aws/s3-lambda/random/: access_s3_from_lambda.py  lambda_function.py
play-langchain/: config.py  main.py  pyproject.toml
play-react/: package-lock.json
play-react/src/: App.js
play-ts/: README.md  package-lock.json
play-ts/sandbox1/: main.js  main.ts
play-ts/sandbox2/: .env  .prettierrc  SETUP.md  jest.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
play-ts/sandbox3/: SETUP.md  package-lock.json  package.json
play-ts/sandbox4/: README.md  index.html  package-lock.json  (+1 more)
play-with-adk/: README.md  pyproject.toml
proto-cpp/: addressbook.proto
python-fastapi/: README.md  pyproject.toml
python-module/: README.md  main.py  pyproject.toml
python-multiprocessing/: main.py  pyproject.toml
pytorch-distributed/: distributed_rnn.py  pipeline.py  pyproject.toml
rust-module/: Cargo.toml  README.md  main.rs  mul.rs
rust-os/: Cargo.toml  README.md
rust-sandbox/: .gitignore  Cargo.toml
sandbox-claude/: .gitignore  .prettierignore  README.md  components.json  index.html  jest.config.js  package-lock.json  package.json  run-dev-client.sh  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
sandbox-claude2/python/: app.db  main.py  pyproject.toml
sandbox-claude2/python/frontend/: package-lock.json  package.json
sandbox-claude2/python/frontend/src/: App.tsx
sandbox-claude2/python/frontend/src/api/: client.ts
sandbox-claude2/python/frontend/src/components/ui/: button.tsx
sandbox-claude2/python/frontend/src/pages/: EventDetail.tsx  Home.tsx  NewEvent.tsx
sandbox-claude2/python/src/database/: connection.py
sandbox-claude2/python/src/domain/: attendance.py  candidate.py  event.py  user.py
sandbox-claude2/python/src/infrastructure/: attendance_repository_impl.py  candidate_repository_impl.py  event_repository_impl.py  user_repository_impl.py
sandbox-claude2/python/src/repository/: attendance_repository.py  candidate_repository.py  event_repository.py  user_repository.py
sandbox-claude2/python/src/router/: attendance_router.py  candidate_router.py  event_router.py  schemas.py  user_router.py
sandbox-claude2/python/tests/: conftest.py
sandbox-claude2/python/tests/infrastructure/: test_attendance_repository.py  test_candidate_repository.py  test_event_repository.py  test_user_repository.py
sandbox-claude2/python/tests/router/: test_attendance_router.py  test_candidate_router.py  test_event_router.py  test_user_router.py
sandbox-strands/: README.md  main.py  pyproject.toml
systemd-sandbox/: README.md  pyproject.toml  setup.sh
systemd-sandbox/etc/systemd/system/: tiny_httpd.service
tandem-repeat/: README.md  do
typescript-sandbox/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
websocket-chat/: README.md  package-lock.json  package.json  script.js  server.js
x64-asm/: X64.md  do
(+41 files in other folders)
