[package]
name = "multiprocessing-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "mutex"
path = "src/mutex.rs"

[[bin]]
name = "condvar"
path = "src/condvar.rs"

[[bin]]
name = "rwlock"
path = "src/rwlock.rs"

[[bin]]
name = "semaphore_test"
path = "src/semaphore_test.rs"