[tool.poetry]
name = "python-multiprocessing"
version = "0.1.0"
description = ""
authors = ["hedwig100 <shota.in26@gmail.com>"]
readme = "README.md"
packages = [{include = "python_multiprocessing"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
